# telegram-bot-v3

./: .env.example  .flake8  .gitignore  .railwayignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Code Review - P0 Access Control Security Fix.md  Copy of Israel Missions 2025_ Team Members - Form Responses 1.csv  Corrected Import.csv  Dockerfile  GEMINI.md  PROJECT_PLAN.md  Plan Review - Payment Amount Validation and Status Management.md  README.md  airtable_database_structure.md  discovered_real_schema.json  discovered_schema.json  mypy.ini  nixpacks.toml  project_index.json  pyproject.toml  pyproject.toml.backup  pytest.ini  railway-deployment-guide.md  railway.toml  schedule_metadata.json  selective-mcp-guide.md  start_bot.sh  test_display.py
.claude/: settings.json
.claude/agents/: adr-manager.md  changelog-generator.md  create-pr-agent.md  docs-updater.md  plan-reviewer.md  task-pm-validator.md  task-splitter.md  workflow-feedback-collector.md
.claude/commands/: README.md  ci.md  ct.md  fci.md  jb.md  mp.md  (+3 more)
codex/: cp.md  sr.md
requirements/: base.txt  dev.txt  test.txt
scripts/: add_real_schedule.py  add_sample_schedule_data.py  create_schedule_table_simple.py  discover_airtable_schema.py  discover_real_schema.py  fetch_schedule_metadata.py  import_israel_missions_participants.py  install-hooks.sh  schedule_field_mappings_template.json  validate_production_schema.py  verify_schedule.py
src/: __init__.py  main.py
tasks/: Code Review - Airtable Pagination Fix.md  task-2025-08-28-indexer-hook.md
tests/: __init__.py  conftest.py  test_project_structure.py
(+586 files in other folders)
