[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tres-dias-telegram-bot"
version = "0.1.0"
description = "Telegram bot for managing Tres Dias event participants"
requires-python = ">=3.9"
authors = [
  { name = "Alexandr Basis" }
]
license = "Proprietary"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

# Note: We intentionally avoid setuptools_scm and egg_info options.
# Buildpacks on Railway may copy only this file during a metadata probe.
# Keeping this minimal prevents errors when source files are absent.
